Remove remaining of `--enable-preview` from javadoc plugin