@@ -75,7 +75,6 @@
                             <release>17</release>
                             <additionalJOptions>
                                 <additionalJOption>-Xdoclint:-missing</additionalJOption> <!-- No need to print "no comment" warnings -->
-                                <additionalJOption>--enable-preview</additionalJOption>
                             </additionalJOptions>
                             <links>
                                 <link>https://ci.dv8tion.net/job/JDA5/javadoc</link>
